<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login"
        android:background="@drawable/fondo_login">
        <TextView
            android:id="@+id/holaLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holaLOGIN"
            android:textSize="50sp"
            app:layout_constraintTop_toTopOf="@id/login"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="@id/login"
            android:layout_marginStart="30dp">
        </TextView>
        <TextView
            android:id="@+id/bienvenidoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenidoLOGIN"
            android:textSize="50sp"
            app:layout_constraintTop_toBottomOf="@id/holaLogin"
            app:layout_constraintStart_toStartOf="@id/holaLogin">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLogin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bienvenidoLogin"
            app:layout_constraintStart_toStartOf="@id/login"
            app:layout_constraintEnd_toEndOf="@id/login"
            android:layout_marginTop="200dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editcorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailLOGIN"
                android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contrasenaLogin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailLogin"
            app:layout_constraintStart_toStartOf="@id/login"
            app:layout_constraintEnd_toEndOf="@id/login"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editpin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasenaLOGIN"
                android:inputType="numberPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/botonLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/celeste"
            android:text="@string/botonLOGIN"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/contrasenaLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="70dp">
        </Button>
        <TextView
            android:id="@+id/noTienesCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noCuentaLOGIN"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/botonLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp">
        </TextView>
        <TextView
            android:id="@+id/crearCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crearCuentaLOGIN"
            android:textSize="14sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/celeste"
            app:layout_constraintTop_toBottomOf="@id/noTienesCuenta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>